CI CD and tests

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,85 @@
+# Environment files
 *.env
-.log
+*.env.*
+.env.prod
+.env.dev
+config.*.env
+
+# Logs
+*.log
 /logs
+logs/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+ENV/
+env/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Git
+.git/
+.gitignore
+.gitattributes
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Data files
+api_data/
+*.json
+!config.yaml
+!utils/logger/logger.yaml
+
+# Secrets
+secrets/
+*.pem
+*.key
+
+# Documentation
+*.md
+!README.md
+docs/
+
+# CI/CD
+.github/
+
+# Docker
+docker-compose*.yml
+Dockerfile*
+.dockerignore
+
+# Alembic (if not needed in container)
 /alembic
