--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,83 @@
 services:
-  app:
-    build: .
-    env_file:
-      - config.prod.env
+  db:
+    image: postgis/postgis:16-3.4
+    restart: unless-stopped
+    env_file: .env.prod
     volumes:
-      - app-logs:/app/logs
-    restart: always
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  backend:
+    image: ghcr.io/hubert-wawszczak/pilarzops-backend:prod
+    restart: unless-stopped
+    env_file: .env.prod
+    container_name: pilarzops-backend
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  rdlp_api:
+    image: ghcr.io/hubert-wawszczak/rdlp_api:prod
+    restart: unless-stopped
+    env_file: .env.prod
+    container_name: rdlp-api
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+    volumes:
+      - rdlp-api-logs:/app/logs
+      - rdlp-api-data:/app/api_data
+      # Optional: mount config files if you need to change them without rebuilding
+      # - ./config.yaml:/app/config.yaml:ro
+      # - ./utils/logger/logger.yaml:/app/utils/logger/logger.yaml:ro
+    healthcheck:
+      test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  frontend:
+    image: ghcr.io/hubert-wawszczak/pilarzops_web:prod
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
+      - rdlp_api
+      - frontend
+    networks:
+      - app-network
 
 volumes:
-  app-logs:
+  db_data:
+  rdlp-api-logs:
+  rdlp-api-data:
+
+networks:
+  app-network:
+    driver: bridge
