--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install package in development mode
+        run: |
+          pip install -e .
+
       - name: Run tests
         env:
           DB_HOST: localhost
