--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,7 +31,11 @@ services:
       start_period: 40s
 
   rdlp_api:
-    image: ghcr.io/hubert-wawszczak/rdlp_api:prod
+    # Use build for local development, or uncomment image for production
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # image: ghcr.io/hubert-wawszczak/rdlp_api:prod  # Uncomment when image is available in registry
     restart: unless-stopped
     env_file: .env.prod
     container_name: rdlp-api
