--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -56,6 +56,8 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    profiles:
+      - rdlp-api
 
   frontend:
     # Placeholder - will be added later
