--- a/.github/workflows/build-rdlp.yml
+++ b/.github/workflows/build-rdlp.yml
@@ -13,17 +13,26 @@ jobs:
       packages: write
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Login to GHCR
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push RDLP
-        run: |
-            docker build -t ghcr.io/hubert-wawszczak/rdlp_api:prod .
-            docker push ghcr.io/hubert-wawszczak/rdlp_api:prod
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ghcr.io/hubert-wawszczak/rdlp_api:prod
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
